# lyceum-practice-blog-1-25

./: .pre-commit-config.yaml  README.md  erd.mmd  pyproject.toml  schema.sql
app/: README.md  main.py  models.py  storage.py  views.py
app/data/: store.json
app/routers/: posts.py  users.py
app/static/css/: base.css  home.css  post_form.css  post_view.css
app/templates/: base.html  home.html  post_form.html  post_view.html  user_form.html
