[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = "Blog"
authors = ["Neon"]
readme = "README.md"
license = "MIT"
packages = [{ include = "my_project" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.12.0"
ruff = "^0.12.0"
mypy = "^1.6.0"
pre-commit = "^3.4.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "C", "TC"]
target-version = "py311"
extend-select = ["ANN"]

[tool.mypy]
python_version = 3.11
warn_unused_configs = true
ignore_missing_imports = true
strict = true
